Updated: user_user_recs_part2

--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -2171,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 322,
    "metadata": {
     "collapsed": true
    },
@@ -2258,25 +2258,31 @@
     "    recs = []\n",
     "    for next_id in neighbors_df[\"neighbor_id\"]:\n",
     "        # Get articles viewed by next_user\n",
-    "        article_ids = user_item.loc[next_id]\n",
-    "        recs.extend([str(article_id) for article_id in article_ids[article_ids == 1].index])\n",
+    "        next_article_ids = user_item.loc[next_id]\n",
+    "        next_article_ids = [(article_id) for article_id in next_article_ids[next_article_ids == 1].index]\n",
     "\n",
-    "        # Unique values\n",
-    "        recs = list(set(recs))\n",
+    "        # Filtered dataframe that contains only those articles that the next_user has read\n",
+    "        filtered_df = df[df[\"article_id\"].isin(next_article_ids)]\n",
+    "        next_article_ids = get_top_article_ids(len(next_article_ids), filtered_df)\n",
+    "\n",
+    "        # Add articles to recommendation\n",
+    "        for article_id in next_article_ids:\n",
+    "            if article_id not in viewed_article_ids and article_id not in recs:\n",
+    "                recs.append(str(article_id))\n",
     "\n",
     "        # Breaks if m recommendations are found\n",
     "        if len(recs) >= m:\n",
     "            break\n",
     "\n",
     "    # Find unique article names\n",
-    "    rec_names = list(set(df[df[\"article_id\"].isin(np.float_(recs[:m]))][\"title\"]))\n",
+    "    rec_names = list(set(df[df[\"article_id\"].isin(np.float_(recs))][\"title\"]))\n",
     "    \n",
-    "    return recs[:m], rec_names"
+    "    return recs[:m], rec_names[:m]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 323,
    "metadata": {
     "collapsed": true
    },
@@ -2286,10 +2292,10 @@
      "output_type": "stream",
      "text": [
       "The top 10 recommendations for user 20 are the following article ids:\n",
-      "['1271.0', '1296.0', '727.0', '1186.0', '89.0', '53.0', '1053.0', '232.0', '1320.0', '981.0']\n",
+      "['1271.0', '1053.0', '1296.0', '1320.0', '1186.0', '981.0', '53.0', '232.0', '495.0', '793.0']\n",
       "\n",
       "The top 10 recommendations for user 20 are the following article names:\n",
-      "['top 20 r machine learning and data science packages', 'customer demographics and sales', 'fortune 100 companies', 'connect to db2 warehouse on cloud and db2 using scala', 'super fast string matching in python', 'access mysql with python', 'introducing streams designer', 'from python nested lists to multidimensional numpy arrays', 'housing (2015): united states demographic measures', 'self-service data preparation with ibm data refinery']\n"
+      "['top 20 r machine learning and data science packages', 'customer demographics and sales', 'fortune 100 companies', '10 powerful features on watson data platform, no coding necessary', 'connect to db2 warehouse on cloud and db2 using scala', 'super fast string matching in python', 'top 10 machine learning algorithms for beginners', 'access mysql with python', 'introducing streams designer', 'from python nested lists to multidimensional numpy arrays']\n"
      ]
     }
    ],
